fix import wizard overflow

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -6090,7 +6090,7 @@ label + .wizard-buttonList {
 }
 
 .import.wizard .wizard-slide {
-  height: 300px;
+  min-height: 300px;
 }
 
 .import-source {
